Fix CSS wrong font in admin caused in PR #11

--- a/assets/styles/admin/_container.scss
+++ b/assets/styles/admin/_container.scss
@@ -3,6 +3,7 @@
     border-radius: $adminBorderRadius;
     color: black;
     display: block;
+    font-family: $primaryFont;
     height: calc(100vh - 5rem);
     margin: 1rem;
     overflow: auto;
