--- a/assets/styles/admin/_header.scss
+++ b/assets/styles/admin/_header.scss
@@ -15,7 +15,7 @@
                 border: solid $adminBorderColor 1px;
                 border-radius: $adminBorderRadius;
                 color: black;
-                font-family: var(--primary-font);
+                font-family: $primaryFont;
                 text-decoration: none;
                 margin: 0 0.5rem;
                 padding: 0.5rem;
